Add AGRA Bulletins HTML structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>AGRA Bulletins – XylemLab</title>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, sans-serif;
+      max-width: 800px;
+      margin: 60px auto;
+      padding: 0 20px;
+    }
+    h1 { margin-bottom: 0.2em; }
+    ul { margin-top: 1em; }
+    a { color: #0b5fff; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
+</head>
+<body>
+  <h1>AGRA Regional Food Balance Sheet</h1>
+  <p>Interactive monthly bulletins by XylemLab</p>
+
+  <h2>Latest</h2>
+  <ul>
+    <li>
+      <strong>November 2025</strong> –
+      <a href="Bulletins/2025/11_November_2025/output/bulletin.html">
+        Open interactive report
+      </a>
+    </li>
+  </ul>
+
+  <h2>Archive</h2>
+  <ul>
+    <li>2026 – Coming soon</li>
+  </ul>
+
+  <footer style="margin-top:40px; color:#666;">
+    XylemLab · University of Maryland
+  </footer>
+</body>
+</html>
 
