--- a/index.html
+++ b/index.html
@@ -21,19 +21,28 @@
   <p>Interactive monthly bulletins by XylemLab</p>
 
   <h2>Latest</h2>
-  <ul>
-    <li>
-      <strong>November 2025</strong> –
-      <a href="Bulletins/2025/11_November_2025/output/bulletin.html">
-        Open interactive report
-      </a>
-    </li>
-  </ul>
+    <ul>
+      <li>
+        <strong>December 2025</strong> –
+        <a href="Bulletins/2025/12_December_2025/output/bulletin.html">
+          Open interactive report
+        </a>
+      </li>
+      <li>
+        <strong>November 2025</strong> –
+        <a href="Bulletins/2025/11_November_2025/output/bulletin.html">
+          Open interactive report
+        </a>
+      </li>
+    </ul>
+
 
   <h2>Archive</h2>
-  <ul>
-    <li>2026 – Coming soon</li>
-  </ul>
+    <ul>
+      <li>2026 – Coming soon</li>
+      <li>2025 – November, December</li>
+    </ul>
+
 
   <footer style="margin-top:40px; color:#666;">
     XylemLab · University of Maryland
